# LightBox_2.0

./: .gitignore  CLAUDE.md  CosmicLED.py  LICENSE  aicheck  debug_platform.py  deploy.sh  package.json  pyproject.toml  run_simulation.py  setup.sh  test_optimized.py
.aicheck/: RULES.md  actions_index.md  current_action
.aicheck/actions/fix-optimized-implementation/: PLAN.md  fix-optimized-implementation-plan.md  progress.md
.aicheck/actions/hub75-matrix-integration/: hub75-matrix-integration-plan.md  progress.md  todo.md
.aicheck/actions/hub75-matrix-integration/supporting_docs/: current-hub75-analysis.md  hub75-optimization-guide.md  (+2 more)
.aicheck/actions/lboptimization/: lboptimization-plan.md  progress.md
.github/workflows/: README.md  SSH_KEY_SETUP.md  deploy-to-pi.yml  sync-to-all-pis.yml  sync-to-pi-3b.yml  sync-to-pi-zero.yml  sync-to-pi.yml
.mcp/server/: package-lock.json
LB_Interface_work/: hub75_gui_ready.py  quick_hub75_setup.py  test_color_math.py
LB_Interface_work/.claude/summaries/: 2025-01-05_102930_compact.txt
animations/: cosmic.py
core/: conductor.py  config.py  performance.py
documentation/: HUB75_SETUP_GUIDE.md
documentation/dependencies/: dependency_index.md
drivers/: hub75_driver.py  matrix_driver.py
hardware/: hardware_manager.py
scripts/: DEPRECATED.md  cleanup_deprecated.py  matrix_test.py  migrate_to_hub75.py  migrate_to_optimized.py  parametric_waves.py  shimmer.py  symmetry.py  waves.py
tests/: test_hub75_driver.py  test_hub75_integration.py  test_optimized_implementation.py
web/: app.py
web/templates/: index.html
(+4 files in other folders)
